# Information-protection

./: CMakeLists.txt  File.doc
Lab2/: CMakeLists.txt  RSA_Encryptor.cpp  RSA_Encryptor.h  input.txt  main.cpp  output.txt
Lab_1/: CMakeLists.txt  file1.doc  key.txt  main.cpp
RSA/: BlowFish.py  LSB.py  encoded.txt  file.txt  main.py  newfile.docx  newfile.txt
