cmake_minimum_required(VERSION 3.27)
project(Information_protection)

set(CMAKE_CXX_STANDARD 14)

add_executable(Information_protection
        Lab_1/.idea/.gitignore
        Lab_1/.idea/misc.xml
        Lab_1/.idea/modules.xml
        Lab_1/.idea/workspace.xml
        Lab_1/.idea/Zishita_information.iml
        Lab_1/cmake-build-debug/.cmake/api/v1/query/cache-v2
        Lab_1/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        Lab_1/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        Lab_1/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-4f18e222c502678e8fb1.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-8b9178282d7235d4f0c8.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-8a9dbcd83c0acbf90989.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/index-2024-02-10T11-41-13-0913.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/target-Zishita_information-Debug-c0dbbea6ee94704d5c1a.json
        Lab_1/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-c966953c01b61b3b683a.json
        Lab_1/cmake-build-debug/Testing/Temporary/LastTest.log
        Lab_1/cmake-build-debug/.ninja_deps
        Lab_1/cmake-build-debug/.ninja_log
        Lab_1/cmake-build-debug/build.ninja
        Lab_1/cmake-build-debug/cmake_install.cmake
        Lab_1/cmake-build-debug/CMakeCache.txt
        Lab_1/cmake-build-debug/Zishita_information.exe
        Lab_1/CMakeLists.txt
        Lab_1/File.doc
        Lab_1/file1.doc
        Lab_1/file2.doc
        Lab_1/key.txt
        Lab_1/main.cpp)
